--- a/findly-builder/src/index.html
+++ b/findly-builder/src/index.html
@@ -2,34 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Findly.ai</title>
+  <title>Findly</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
-  <app-root>
-    <!--LOADER-->
-    <style>
-      .loaderLogoImage {   
-        width: 20px;
-        height: 20px;
-        display: block;
-        position: absolute;
-        top: -29px;
-        left: 142px;
-        margin: auto;
-        margin: auto;
-        outline: 1px solid transparent;
-        -webkit-animation: spin 0.5s linear infinite;
-        animation: spin 0.5s linear infinite;
-      }
-      </style>
-  <div class="loaderContainer">
-      <img src="assets/images/logoIcon.png" class="loaderLogoImage" >
-  </div>
-<!--LOADER-->
-  </app-root>
+<body class="mat-typography">
+  <app-root></app-root>
 </body>
 </html>
