SDK communication with business app temperory

--- a/findly-builder/src/index.html
+++ b/findly-builder/src/index.html
@@ -26,6 +26,6 @@
     
 
     <script src="assets/web-kore-sdk/demo/findly/findly-config.js" type="text/javascript"></script>
-    <script src="assets/web-kore-sdk/demo/findly/findly-main.js" type="text/javascript"></script>
+    <!-- <script src="assets/web-kore-sdk/demo/findly/findly-main.js" type="text/javascript"></script> -->
     <script src="assets/web-kore-sdk/demo/libs/kore-no-conflict-end.js" type="text/javascript"></script>
 </html>
