--- a/findly-builder/src/assets/web-kore-sdk/demo/index_findly.html
+++ b/findly-builder/src/assets/web-kore-sdk/demo/index_findly.html
@@ -11,6 +11,7 @@
     <script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="libs/jquery-ui.min.js" type="text/javascript"></script>
     <link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
+    <script src="../kore-bot-sdk-client.js"></script>
     <script src="findly/findly-sdk.js" type="text/javascript"></script><!--findly sdk file-->
     <link href="findly/findly-sdk.css" rel="stylesheet"></link><!--findly sdk css file-->
     <link href="findly/findly-demo.css" rel="stylesheet"></link><!--findly sdk demo file-->
