--- a/findly-builder/src/index.html
+++ b/findly-builder/src/index.html
@@ -32,9 +32,9 @@
 
     <!-- style -->
     
-    <!-- <script src="assets/web-kore-sdk/demo/libs/moment.js" type="text/javascript"></script>
+    <!-- <script src="assets/web-kore-sdk/demo/libs/moment.js" type="text/javascript"></script> -->
     <script src="assets/web-kore-sdk/libs/lodash.min.js"></script>
-    <script src="assets/web-kore-sdk/libs/d3.v4.min.js"></script>
+    <!-- <script src="assets/web-kore-sdk/libs/d3.v4.min.js"></script>
     <script src="assets/web-kore-sdk/libs/KoreGraphAdapter.js" type="text/javascript"></script>
     <script src='assets/web-kore-sdk/libs/anonymousassertion.js'></script>
     <script src="assets/web-kore-sdk/kore-bot-sdk-client.js"></script>
