Commit contains modifications to request payload & URI of Search API & modifications to bot response for supporting bot action templates.

--- a/findly-builder/src/assets/web-kore-sdk/demo/index.html
+++ b/findly-builder/src/assets/web-kore-sdk/demo/index.html
@@ -18,6 +18,7 @@
     <script src="../libs/perfect-scrollbar.js" type="text/javascript"></script>
     <script src="kore-widgets.js" type="text/javascript"></script><!--widget sdk file-->
     <script src="chatWindow.js" type="text/javascript"></script>
+    <script src="../libs/jstz.js" type="text/javascript"></script> <!-- JavaScript Time Zone Detect -->
     <script src="libs/jquery.daterangepicker.js" type="text/javascript"></script>
 		<link href="libs/daterangepicker.css" rel="stylesheet"></link>
 		<script src="libs/jquery-clockpicker.js" type="text/javascript"></script>
