Callback handler for search results

--- a/findly-builder/src/index.html
+++ b/findly-builder/src/index.html
@@ -17,6 +17,7 @@
     <script src="assets/web-kore-sdk/demo/libs/kore-no-conflict-start.js" type="text/javascript"></script>
     <script src="assets/web-kore-sdk/libs/uuid.min.js"></script>
     <script src="assets/web-kore-sdk/demo/libs/jquery.js" type="text/javascript"></script>
+    <script src="assets/web-kore-sdk/demo/libs/pubsub.js" type="text/javascript"></script>
     <script src="assets/web-kore-sdk/demo/libs/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="assets/web-kore-sdk/demo/libs/jquery-ui.min.js" type="text/javascript"></script>
     <link href="assets/web-kore-sdk/demo/libs/jquery-ui.min.css" rel="stylesheet"></link>
