--- a/findly-builder/src/assets/web-kore-sdk/demo/index.html
+++ b/findly-builder/src/assets/web-kore-sdk/demo/index.html
@@ -49,6 +49,7 @@
     <script src="kore-widgets-chat-main.js" type="text/javascript"></script>
     <script src="libs/kore-no-conflict-end.js" type="text/javascript"></script>
     <link href="fonts/inter.css" rel="stylesheet"></link>
+    <script src="libs/pubsub.js" type="text/javascript"></script>
 
 </head>
 
@@ -111,5 +112,47 @@
         <button class="openChatWindow">Open Chat Window</button>
     </div>
 </body>
+
+<script type="text/javascript">
+
+    var findlyConfig=window["KoreSDK"].findlyConfig;
+    var findlySdk = new FindlySDK(findlyConfig);
+
+    findlySdk.initializeStructureDataTemplates();
+
+    // findlySdk.initializeStructureDataTemplates({
+    //     container : '.structured-data-full-search-container', /*  start with '.' if class or '#' if id of the element*/
+    //     data : {},
+    //     templateId : 'grid-tpt-tle-wt-txt',
+    //     template : `
+    //     <div class="col-12 row faq-template-test">
+    //     <div class="col-6">
+    //       <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //       <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //     </div>
+    //     <div class="col-6">
+    //       <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //       <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //     </div>
+    //     </div>
+    //     <div class="col-12">
+    //         <div class="col-6">
+    //         <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //         <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //         </div>
+    //         <div class="col-6">
+    //         <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //         <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //         </div>
+    //     </div>`
+    // });
+
+    // findlySdk.initializeStructureDataTemplates({
+    //     container : '.structured-data-full-search-container', /*  start with '.' if class or '#' if id of the element*/
+    //     data : {},
+    //     templateId : 'grid-tpt-tle-wt-txt'
+    // });
+
+    </script>
 
 </html>
