Updated SDK changes for
Generic Class Adding, Theme changes, Action Templates, Added Emoji.

--- a/findly-builder/src/index.html
+++ b/findly-builder/src/index.html
@@ -27,6 +27,8 @@
     <script src="assets/web-kore-sdk/demo/custom/customTemplate.js" type="text/javascript"></script>
     <link href="assets/web-kore-sdk/demo/custom/customTemplate.css" rel="stylesheet"></link>
     <link href="assets/web-kore-sdk/demo/chatWindow.css" rel="stylesheet"></link>
+    <script src="assets/web-kore-sdk/libs/emoji.js" type="text/javascript"></script>
+    <link href="assets/web-kore-sdk/libs/emojione.sprites.css" rel="stylesheet"></link>
     <script src="assets/web-kore-sdk/libs/perfect-scrollbar.js"></script>
     <link href="assets/web-kore-sdk/libs/prefect-scrollbar.css" rel="stylesheet"></link>
     <script src="assets/web-kore-sdk/demo/findly/findly-sdk.js" type="text/javascript"></script><!--findly sdk file-->
