--- a/findly-builder/src/assets/web-kore-sdk/demo/index.html
+++ b/findly-builder/src/assets/web-kore-sdk/demo/index.html
@@ -3,56 +3,41 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=1.0">
+    <title>SearchAssistant.ai Demo</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="libs/kore-no-conflict-start.js" type="text/javascript"></script>
     <script src="../libs/uuid.min.js"></script>
     <script src="libs/jquery.js" type="text/javascript"></script>
     <script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="libs/jquery-ui.min.js" type="text/javascript"></script>
     <link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
-    <script src="libs/moment.js" type="text/javascript"></script>
-    <script src="../libs/lodash.min.js"></script>
     <script src="../libs/d3.v4.min.js"></script>
     <script src="../libs/KoreGraphAdapter.js" type="text/javascript"></script>
-    <script src='../libs/anonymousassertion.js'></script>
+    <script src="libs/pubsub.js"></script>
     <script src="../kore-bot-sdk-client.js"></script>
-    <script src="../libs/perfect-scrollbar.js" type="text/javascript"></script>
-    <script src="kore-widgets.js" type="text/javascript"></script><!--widget sdk file-->
-    <script src="chatWindow.js" type="text/javascript"></script>
-    <script src="../libs/jstz.js" type="text/javascript"></script> <!-- JavaScript Time Zone Detect -->
-    <script src="libs/jquery.daterangepicker.js" type="text/javascript"></script>
-		<link href="libs/daterangepicker.css" rel="stylesheet"></link>
-		<script src="libs/jquery-clockpicker.js" type="text/javascript"></script>
-		<link href="libs/jquery-clockpicker.css" rel="stylesheet"></link>
-		<link href="../libs/kore-pickers.css" rel="stylesheet"></link>
-		<script src="../libs/kore-pickers.js" type="text/javascript"></script>
-    <script src="../libs/emoji.js" type="text/javascript"></script>
-    <script src="../libs/recorder.js" type="text/javascript"></script>
-    <script src="../libs/recorderWorker.js" type="text/javascript"></script>
-    <link href="kore-widgets.css" rel="stylesheet"></link><!--widget sdk file-->
-    <link href="chatWindow.css" rel="stylesheet"></link>
-    <link href="../libs/emojione.sprites.css" rel="stylesheet"></link>
-    <link href="../libs/purejscarousel.css" rel="stylesheet"></link>
-    <link href="../libs/prefect-scrollbar.css" rel="stylesheet"></link>
-    <script src="../libs/purejscarousel.js" type="text/javascript"></script>
     <script src="custom/customTemplate.js" type="text/javascript"></script>
-    <link href="custom/customTemplate.css" rel="stylesheet"></link>
-    <script src="../libs/ie11CustomProperties.js"></script>
-    <!-- <script type="text/javascript" src="libs/loader.js"></script>  -->
-
-    <!-- Uncomment these lines for Google Speech. -->
-    <!-- <script type="text/javascript" src="../libs/speech/app.js"></script>
-		<script type="text/javascript" src="../libs/speech/key.js"></script>
-        <script type="text/javascript" src="../libs/client_api.js"></script> -->
-        
-    <script src="kore-config.js" type="text/javascript"></script>
-    <script src="kore-widgets-config.js" type="text/javascript"></script>
-    <script src="kore-widgets-chat-main.js" type="text/javascript"></script>
+		<link href="custom/customTemplate.css" rel="stylesheet"></link>
+		<link href="../demo/chatWindow.css" rel="stylesheet"></link>
+    <script src="../libs/emoji.js" type="text/javascript"></script>
+    <link href="../libs/emojione.sprites.css" rel="stylesheet"></link>
+    <script src="../libs/perfect-scrollbar.js"></script>
+    <link href="../libs/prefect-scrollbar.css" rel="stylesheet"></link>
+    <script src="findly/findly-sdk.js" type="text/javascript"></script><!--findly sdk file-->
+    <link href="findly/findly-sdk.css" rel="stylesheet"></link><!--findly sdk css file-->
+    <link href="findly/findly-demo.css" rel="stylesheet"></link><!--findly sdk demo file-->
+    <link href="css/top-search.css" rel="stylesheet"></link>    
+    <link href="../libs/purejscarousel.css" rel="stylesheet"></link>
+    <script src="../libs/lodash.min.js"></script>
+    <script src="../libs/purejscarousel.js" type="text/javascript"></script>
+    <script src="findly/findly-config.js" type="text/javascript"></script>
+    <script src="findly/findly-main.js" type="text/javascript"></script>
     <script src="libs/kore-no-conflict-end.js" type="text/javascript"></script>
     <link href="fonts/inter.css" rel="stylesheet"></link>
+    <script src="libs/pubsub.js" type="text/javascript"></script>
 
 </head>
 
-<body class="bodybg">
+<body class="bodybg demo">
     <div class="KoreSearchAssistant">
         <div class="ksa-header">
            <div class="ksa-logo"><img class="logo" src="libs/images/newtheme/futurebank-logo.svg"></div>
@@ -75,8 +60,8 @@
         </div>
         <div class="info-section">
             <div class="content">
-                <div class="main-title">Chooose the right credit card for you</div>
-                <div class="desc-text">Weather you want Cash Back, Great Rewards, or Low intro Rate, the choice is all yours</div>
+                <div class="main-title">Choose the right credit card for you</div>
+                <div class="desc-text">Wether you want Cash Back, Great Rewards, or Low interest Rate, the choice is all yours</div>
                 <a href="#">Learn More</a>
             </div>
         </div>
@@ -110,6 +95,127 @@
     <div id="chatContainer">
         <button class="openChatWindow">Open Chat Window</button>
     </div>
+    <!-- <div class="context_variables_textarea hide">
+        <textarea id="contextjsonfield" name="w3review" rows="4" cols="50" placeholder="Provide context object"></textarea>
+        <div class="btn_actions">
+            <button class="button_secondary">Clear</button>
+            <button class="button_blue">Ok</button>
+        </div>
+    </div>     -->
+
+    <script id="structred-data-template" type="text/x-jqury-tmpl">
+        <div class="tpt-1-tle-wt-txt">
+            <!-- <h1>Tile with Text</h1> -->
+            <div class="search-heads">DATA</div>
+            {{if isClickable==true}}
+              <div class="tile-with-text-parent">
+                <a class="tile-with-text" href="" target="_blank">
+                  <div class="tile-heading text-truncate">How do I request a refund for my credit card account?</div>
+                  <div class="tile-description text-truncate">Contact your customer service representati 7 days a week</div>
+                </a>
+                <a class="tile-with-text">
+                  <div class="tile-heading text-truncate">How do I request a refund for my credit card account?</div>
+                  <div class="tile-description text-truncate">Contact your customer service representati 7 days a week</div>
+                </a>
+                <a class="tile-with-text">
+                  <div class="tile-heading text-truncate">How do I request a refund for my credit card account?</div>
+                  <div class="tile-description text-truncate">Contact your customer service representati 7 days a week</div>
+                </a>
+              </div>
+            {{/if}}
+            {{if isClickable==false}}
+              <div class="tile-with-text-parent with-accordion">
+                <div class="tile-with-text">
+                  <div class="tile-heading accordion p-0" id="1">
+                    How do I request a refund for my credit card account?
+                      <div class="tile-description defalut-show text-truncate">Contact your customer service representati 7 days a week</div>
+                  </div>                     
+                  <div class="panel">
+                      <div class="tile-description">Contact your customer service representati 7 days a week oe email us at xtcred@cred.com. You can contact us through our toll free number 1800-9890-9878 too.</div>
+                  </div>
+                </div>
+                <div class="tile-with-text">
+                  <div class="tile-heading accordion p-0" id="1">
+                    How do I request a refund for my credit card account?
+                      <div class="tile-description defalut-show text-truncate">Contact your customer service representati 7 days a week</div>
+                  </div>                     
+                  <div class="panel">
+                      <div class="tile-description">Contact your customer service representati 7 days a week oe email us at xtcred@cred.com. You can contact us through our toll free number 1800-9890-9878 too.</div>
+                  </div>
+                </div>
+                <div class="tile-with-text">
+                  <div class="tile-heading accordion p-0" id="1">
+                    How do I request a refund for my credit card account?
+                      <div class="tile-description defalut-show text-truncate">Contact your customer service representati 7 days a week</div>
+                  </div>                     
+                  <div class="panel">
+                      <div class="tile-description">Contact your customer service representati 7 days a week oe email us at xtcred@cred.com. You can contact us through our toll free number 1800-9890-9878 too.</div>
+                  </div>
+                </div>                    
+              </div> 
+            {{/if}}  
+        </div>
+      </script>
+    
 </body>
+
+<script type="text/javascript">
+
+   // var findlyConfig=window["KoreSDK"].findlyConfig;
+    //var findlySdk = new FindlySDK(findlyConfig);
+
+    //findlySdk.initialize(findlyConfig);
+    /*findlySdk.addSearchResult({
+      structuredDataContainer: '.structured-data-container'
+    });*/
+
+    // findlySdk.addCustomTemplateConfig({
+    //     interface : 'search',
+    //     appearanceType : 'structuredData'
+    //     container : '.structured-data-container', /*  start with '.' if class or '#' if id of the element*/
+    //     data : {},
+    //     templateType : 'listTemplate1',
+    //     layoutType : 'tileWithText',
+    //     template : `
+    //     <div class="col-12 row faq-template-test">
+    //     <div class="col-6">
+    //       <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //       <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //     </div>
+    //     <div class="col-6">
+    //       <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //       <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //     </div>
+    //     </div>
+    //     <div class="col-12">
+    //         <div class="col-6">
+    //         <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //         <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //         </div>
+    //         <div class="col-6">
+    //         <h2 class="col-12">How do I request a refund for my credit card account?</h2>
+    //         <p>Choose the card that best suites your needs and either contact us on 1980948465 or write to us on loremipsum@gmail.com to c....</p>
+    //         </div>
+    //     </div>`
+    // });
+
+    // findlySdk.addCustomTemplateConfig({
+    //     interface : 'search',
+    //     appearanceType : 'structuredData'
+    //     container : '.structured-data-full-search-container', /*  start with '.' if class or '#' if id of the element*/
+    //     data : {},
+    //     templateType : 'grid',
+    //     layoutType : 'tileWithText'
+    // });
+
+    // findlySdk.addCustomTemplateConfig({
+    //     interface : 'search',
+    //     appearanceType : 'structuredData'
+    //     container : '.structured-data-full-search-container', /*  start with '.' if class or '#' if id of the element*/
+    //     data : {},
+    //     templateId : 'structred-data-template'
+    // });
+
+    </script>
 
 </html>
