--- a/findly-builder/src/assets/web-kore-sdk/demo/index.html
+++ b/findly-builder/src/assets/web-kore-sdk/demo/index.html
@@ -22,6 +22,8 @@
     <link href="../libs/emojione.sprites.css" rel="stylesheet"></link>
     <script src="../libs/perfect-scrollbar.js"></script>
     <link href="../libs/prefect-scrollbar.css" rel="stylesheet"></link>
+    <script src="../libs/kore-pickers.js"></script>
+    <link href="../libs/kore-pickers.css" rel="stylesheet">
     <script src="findly/findly-sdk.js" type="text/javascript"></script><!--findly sdk file-->
     <link href="findly/findly-sdk.css" rel="stylesheet"></link><!--findly sdk css file-->
     <link href="findly/findly-demo.css" rel="stylesheet"></link><!--findly sdk demo file-->
