--- a/findly-builder/src/assets/web-kore-sdk/demo/index.html
+++ b/findly-builder/src/assets/web-kore-sdk/demo/index.html
@@ -2,102 +2,118 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=1.0">
-    <title>SearchAssistant.ai Demo</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script src="libs/kore-no-conflict-start.js" type="text/javascript"></script>
-    <script src="../libs/uuid.min.js"></script>
-    <script src="libs/jquery.js" type="text/javascript"></script>
-    <script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
-    <script src="libs/jquery-ui.min.js" type="text/javascript"></script>
-    <link href="libs/jquery-ui.min.css" rel="stylesheet"></link>
-    <script src="../libs/d3.v4.min.js"></script>
-    <script src="../libs/KoreGraphAdapter.js" type="text/javascript"></script>
-    <script src="libs/pubsub.js"></script>
-    <script src="../kore-bot-sdk-client.js"></script>
-    <script src="custom/customTemplate.js" type="text/javascript"></script>
-		<link href="custom/customTemplate.css" rel="stylesheet"></link>
-		<link href="../demo/chatWindow.css" rel="stylesheet"></link>
-    <script src="../libs/emoji.js" type="text/javascript"></script>
-    <link href="../libs/emojione.sprites.css" rel="stylesheet"></link>
-    <script src="../libs/perfect-scrollbar.js"></script>
-    <link href="../libs/prefect-scrollbar.css" rel="stylesheet"></link>
-    <script src="../libs/kore-pickers.js"></script>
-    <link href="../libs/kore-pickers.css" rel="stylesheet">
-    <script src="findly/findly-sdk.js" type="text/javascript"></script><!--findly sdk file-->
-    <link href="findly/findly-sdk.css" rel="stylesheet"></link><!--findly sdk css file-->
-    <link href="findly/findly-demo.css" rel="stylesheet"></link><!--findly sdk demo file-->
-    <link href="css/top-search.css" rel="stylesheet"></link>    
-    <link href="../libs/purejscarousel.css" rel="stylesheet"></link>
-    <script src="../libs/lodash.min.js"></script>
-    <script src="../libs/purejscarousel.js" type="text/javascript"></script>
-    <script src="findly/findly-config.js" type="text/javascript"></script>
-    <script src="findly/findly-main.js" type="text/javascript"></script>
-    <script src="libs/kore-no-conflict-end.js" type="text/javascript"></script>
-    <link href="fonts/inter.css" rel="stylesheet"></link>
-    <script src="libs/pubsub.js" type="text/javascript"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.1, maximum-scale=1.0">
+  <title>SearchAssistant.ai Demo</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="libs/kore-no-conflict-start.js" type="text/javascript"></script>
+  <script src="../libs/uuid.min.js"></script>
+  <script src="libs/jquery.js" type="text/javascript"></script>
+  <script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
+  <script src="libs/jquery-ui.min.js" type="text/javascript"></script>
+  <link href="libs/jquery-ui.min.css" rel="stylesheet">
+  </link>
+  <script src="../libs/d3.v4.min.js"></script>
+  <script src="../libs/KoreGraphAdapter.js" type="text/javascript"></script>
+  <script src="libs/pubsub.js"></script>
+  <script src="../kore-bot-sdk-client.js"></script>
+  <script src="custom/searchTemplate.js" type="text/javascript"></script>
+  <script src="custom/customTemplate.js" type="text/javascript"></script>
+  <link href="custom/customTemplate.css" rel="stylesheet">
+  </link>
+  <link href="../demo/chatWindow.css" rel="stylesheet">
+  </link>
+  <script src="../libs/emoji.js" type="text/javascript"></script>
+  <link href="../libs/emojione.sprites.css" rel="stylesheet">
+  </link>
+  <script src="../libs/perfect-scrollbar.js"></script>
+  <link href="../libs/prefect-scrollbar.css" rel="stylesheet">
+  </link>
+  <script src="../libs/kore-pickers.js"></script>
+  <link href="../libs/kore-pickers.css" rel="stylesheet">
+  <script src="findly/findly-sdk.js" type="text/javascript"></script>
+  <!--findly sdk file-->
+  <link href="findly/findly-sdk.css" rel="stylesheet">
+  </link>
+  <!--findly sdk css file-->
+  <link href="findly/findly-demo.css" rel="stylesheet">
+  </link>
+  <!--findly sdk demo file-->
+  <link href="css/top-search.css" rel="stylesheet">
+  </link>
+  <link href="../libs/purejscarousel.css" rel="stylesheet">
+  </link>
+  <script src="../libs/lodash.min.js"></script>
+  <script src="../libs/purejscarousel.js" type="text/javascript"></script>
+  <script src="findly/findly-config.js" type="text/javascript"></script>
+  <script src="findly/findly-main.js" type="text/javascript"></script>
+  <script src="libs/kore-no-conflict-end.js" type="text/javascript"></script>
+  <link href="fonts/inter.css" rel="stylesheet">
+  </link>
+  <script src="libs/pubsub.js" type="text/javascript"></script>
 
 </head>
 
 <body class="bodybg demo">
-    <div class="KoreSearchAssistant">
-        <div class="ksa-header">
-           <div class="ksa-logo"><img class="logo" src="libs/images/newtheme/futurebank-logo.svg"></div>
-           <div class="ksa-login">
-                <!-- <a class="menu-link">ATM/Branch</a> -->
-                <a class="menu-link login">Login</a>
-                <a class="menu-link loggedIn menu-link-img hide">
-                    <span class="userName">John</span>
-                    <span class="avatarIconDiv">
-                    <img class="user-gray" src="libs/images/user-gray.png">
-                    </span>
-                </a>
-           </div>
-        </div>
-        <div class="ksa-menu">
-            <a class="menu-link">Credit Cards</a>
-            <a class="menu-link">Banking</a>  
-            <a class="menu-link">Leading</a> 
-            <a class="menu-link">Investing</a>       
-        </div>
-        <div class="info-section">
-            <div class="content">
-                <div class="main-title">Choose the right credit card for you</div>
-                <div class="desc-text">Wether you want Cash Back, Great Rewards, or Low interest Rate, the choice is all yours</div>
-                <a href="#">Learn More</a>
-            </div>
-        </div>
-        <div class="card-section">
-            <div class="card-content">
-                <div class="title">Banking Made Easy</div>
-                <div class="img-block">
-                    <img src="libs/images/newtheme/card-image.png">
-                </div>
-                <div class="desc-info">Unlimited check writing, $0.00 minimum opening deposit required and over 60,000 fee-free ATMs in the US. Simple banking.</div>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card-content">
-                <div class="title">Simplify Your Savings</div>
-                <div class="img-block">
-                    <img src="libs/images/newtheme/card-image.png">
-                </div>
-                <div class="desc-info">Easy to access and simple to manage, a Account could be right for you.</div>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card-content">
-                <div class="title">Earn Cash Back Twice</div>
-                <div class="img-block">
-                    <img src="libs/images/newtheme/card-image.png">
-                </div>
-                <div class="desc-info">Earn 2% cash back on purchases: 1% when you buy and 1% as you pay.</div>
-                <a href="#">Learn More</a>
-            </div>
-        </div>
-     </div>          
-    <div id="chatContainer">
-        <button class="openChatWindow">Open Chat Window</button>
+  <div class="KoreSearchAssistant">
+    <div class="ksa-header">
+      <div class="ksa-logo"><img class="logo" src="libs/images/newtheme/futurebank-logo.svg"></div>
+      <div class="ksa-login">
+        <!-- <a class="menu-link">ATM/Branch</a> -->
+        <a class="menu-link login">Login</a>
+        <a class="menu-link loggedIn menu-link-img hide">
+          <span class="userName">John</span>
+          <span class="avatarIconDiv">
+            <img class="user-gray" src="libs/images/user-gray.png">
+          </span>
+        </a>
+      </div>
     </div>
-    <!-- <div class="context_variables_textarea hide">
+    <div class="ksa-menu">
+      <a class="menu-link">Credit Cards</a>
+      <a class="menu-link">Banking</a>
+      <a class="menu-link">Leading</a>
+      <a class="menu-link">Investing</a>
+    </div>
+    <div class="info-section">
+      <div class="content">
+        <div class="main-title">Choose the right credit card for you</div>
+        <div class="desc-text">Wether you want Cash Back, Great Rewards, or Low interest Rate, the choice is all yours
+        </div>
+        <a href="#">Learn More</a>
+      </div>
+    </div>
+    <div class="card-section">
+      <div class="card-content">
+        <div class="title">Banking Made Easy</div>
+        <div class="img-block">
+          <img src="libs/images/newtheme/card-image.png">
+        </div>
+        <div class="desc-info">Unlimited check writing, $0.00 minimum opening deposit required and over 60,000 fee-free
+          ATMs in the US. Simple banking.</div>
+        <a href="#">Learn More</a>
+      </div>
+      <div class="card-content">
+        <div class="title">Simplify Your Savings</div>
+        <div class="img-block">
+          <img src="libs/images/newtheme/card-image.png">
+        </div>
+        <div class="desc-info">Easy to access and simple to manage, a Account could be right for you.</div>
+        <a href="#">Learn More</a>
+      </div>
+      <div class="card-content">
+        <div class="title">Earn Cash Back Twice</div>
+        <div class="img-block">
+          <img src="libs/images/newtheme/card-image.png">
+        </div>
+        <div class="desc-info">Earn 2% cash back on purchases: 1% when you buy and 1% as you pay.</div>
+        <a href="#">Learn More</a>
+      </div>
+    </div>
+  </div>
+  <div id="chatContainer">
+    <button class="openChatWindow">Open Chat Window</button>
+  </div>
+  <!-- <div class="context_variables_textarea hide">
         <textarea id="contextjsonfield" name="w3review" rows="4" cols="50" placeholder="Provide context object"></textarea>
         <div class="btn_actions">
             <button class="button_secondary">Clear</button>
@@ -105,7 +121,7 @@
         </div>
     </div>     -->
 
-    <script id="structred-data-template" type="text/x-jqury-tmpl">
+  <script id="structred-data-template" type="text/x-jqury-tmpl">
         <div class="tpt-1-tle-wt-txt">
             <!-- <h1>Tile with Text</h1> -->
             <div class="search-heads">DATA</div>
@@ -158,7 +174,7 @@
             {{/if}}  
         </div>
       </script>
-    
+
 </body>
 
 <script type="text/javascript">
@@ -167,9 +183,9 @@
     //var findlySdk = new FindlySDK(findlyConfig);
 
     //findlySdk.initialize(findlyConfig);
-    /*findlySdk.addSearchResult({
-      structuredDataContainer: '.structured-data-container'
-    });*/
+  /*findlySdk.addSearchResult({
+    structuredDataContainer: '.structured-data-container'
+  });*/
 
     // findlySdk.addCustomTemplateConfig({
     //     interface : 'search',
@@ -218,6 +234,6 @@
     //     templateId : 'structred-data-template'
     // });
 
-    </script>
+</script>
 
 </html>
