--- a/findly-builder/src/styleguide.html
+++ b/findly-builder/src/styleguide.html
@@ -8765,7 +8765,7 @@
     });
     $('.sg-navigation a').not(".left-nav-accordion a").on('click',function(){
         $(".left-nav-accordion").removeClass('in');       
-        console.log("true");   
+        // console.log("true");   
     });
     $(".seach-input").click(function(event){
         event.stopPropagation();
